--- a/stat-arb-pairs-trading-script.ipynb
+++ b/stat-arb-pairs-trading-script.ipynb
@@ -6,13 +6,157 @@
    "metadata": {},
    "source": [
     "# **Statistical Arbitrage - Pairs Trading**\n",
-    "\n"
+    "\n",
+    "## **Theory**\n",
+    "\n",
+    "### **From Arbitrage to Statistical Arbitrage**\n",
+    "\n",
+    "At its core, **arbitrage** means exploiting price discrepancies between identical or similar assets to earn a *risk-free* profit.\n",
+    "In reality, truly risk-free opportunities are rare and short-lived. So, traders began extending the idea probabilistically: instead of guaranteed profits, they seek **expected** profits with **controlled risk** - this is **statistical arbitrage (stat-arb)**.\n",
+    "\n",
+    "**Statistical arbitrage** is a quantitative trading strategy that uses statistical models to identify mispricings between related securities. It’s based not on perfect replication (as in classical arbitrage) but on the statistical expectation that price relationships will revert to some equilibrium over time. \n",
+    "The key ingredients are:\n",
+    "\n",
+    "* **A model** for the “fair” relationship between asset prices.\n",
+    "* **A deviation measure** (how far the actual prices stray from that model).\n",
+    "* **A trading rule** to exploit mean reversion.\n",
+    "\n",
+    "The simplest and most famous form of stat-arb is **pairs trading**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Pairs Trading: The Intuition**\n",
+    "\n",
+    "In **pairs trading**, we pick two assets (say, two stocks in the same sector) whose prices tend to move together - perhaps Shell and BP.\n",
+    "\n",
+    "1. We monitor their *relative price* - for example, the price difference or a linear combination $S_t = P_{1,t} - \\beta P_{2,t}$.\n",
+    "2. When this spread deviates “too far” from its historical average, we bet on *convergence*:\n",
+    "\n",
+    "   * Go long the underperformer (buy it).\n",
+    "   * Go short the outperformer (sell it).\n",
+    "3. When the spread returns to normal, we close both positions, ideally making a profit.\n",
+    "\n",
+    "This relies on **mean reversion** - the assumption that relative prices don’t drift apart indefinitely but fluctuate around some equilibrium relationship.\n",
+    "\n",
+    "But how can we **verify** whether two price series are genuinely tied together in the long run?\n",
+    "That’s where **cointegration** comes in.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Cointegration: The Statistical Foundation**\n",
+    "\n",
+    "Most financial time series, like stock prices, are **non-stationary** - they follow something like a random walk.\n",
+    "That means they can drift arbitrarily far from their initial value, and standard correlation is unreliable because the level of the series doesn’t have a stable mean or variance.\n",
+    "\n",
+    "However, sometimes two non-stationary series move *together* in such a way that a particular linear combination is **stationary** (mean-reverting).\n",
+    "Formally, if:\n",
+    "$$\n",
+    "X_t \\sim I(1), \\quad Y_t \\sim I(1),\n",
+    "$$\n",
+    "but there exists some ($\\beta$) such that:\n",
+    "$$\n",
+    "Z_t = Y_t - \\beta X_t \\sim I(0),\n",
+    "$$\n",
+    "then ($X_t$) and ($Y_t$) are **cointegrated** with cointegrating vector $(1, -\\beta)$.\n",
+    "\n",
+    "In words: although each price series wanders, their long-run equilibrium relation keeps them tethered.\n",
+    "The deviation $Z_t$ is the “spread” - the variable we expect to revert to its mean. This is the signal that drives a pairs trade.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Testing and Modeling Cointegration**\n",
+    "\n",
+    "Several tools exist to detect and exploit cointegration:\n",
+    "\n",
+    "* **Engle–Granger two-step test**:\n",
+    "\n",
+    "  1. Regress $Y_t$ on $X_t$ to estimate $\\hat{\\beta}$.\n",
+    "  2. Test residuals $Z_t = Y_t - \\hat{\\beta} X_t$ for stationarity using, e.g., the Augmented Dickey-Fuller (ADF) test.\n",
+    "\n",
+    "* **Johansen test**:\n",
+    "  For multiple assets, it finds the rank and cointegrating relationships within a vector error-correction model (VECM).\n",
+    "\n",
+    "If cointegration holds, we can model the short-run deviations using:\n",
+    "$$\n",
+    "\\Delta Y_t = \\alpha (Y_{t-1} - \\beta X_{t-1}) + \\varepsilon_t,\n",
+    "$$\n",
+    "where $\\alpha$ measures the **speed of adjustment** back to equilibrium.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **From Cointegration to Trading**\n",
+    "\n",
+    "Once we have a stationary spread $Z_t = Y_t - \\beta X_t$, we treat it as a *mean-reverting process*, often modeled as:\n",
+    "$$\n",
+    "dZ_t = \\kappa (\\mu - Z_t)dt + \\sigma dW_t,\n",
+    "$$\n",
+    "where:\n",
+    "\n",
+    "* $\\kappa$: mean-reversion speed,\n",
+    "* $\\mu$: long-run mean (usually zero),\n",
+    "* $\\sigma$: volatility of the spread.\n",
+    "\n",
+    "The trading rule is straightforward:\n",
+    "\n",
+    "* Go **long** when $Z_t$ is below its mean (expect it to rise).\n",
+    "* Go **short** when $Z_t$ is above its mean (expect it to fall).\n",
+    "* Close the position when $Z_t$ reverts.\n",
+    "\n",
+    "Profit comes not from predicting direction, but from betting on *relative convergence*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "becb2048",
+   "metadata": {},
+   "source": [
+    "## **Data**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e16cb8f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb58061c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "918ea684",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a49fcd3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed320a41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe34ae8",
    "metadata": {},
    "outputs": [],
    "source": []
